# ppgmne-prf

./: .gitignore  README.md  pyproject.toml
data/cache/prf/: stations.json
data/prf/: transformations.json
notebooks/: ibge.ipynb  intro.ipynb  main.ipynb  methodology.ipynb  optim.ipynb  read_accidents.ipynb  results.ipynb  results_q0.ipynb
notebooks/old/: results_old.ipynb  results_old_old.ipynb  results_p39.ipynb  results_q0_old.ipynb
paper/overleaf-project/: 00-dados.tex  00-pacotes.tex  00-pretextual.tex  UFPR.sty  cap_conclusao.tex  cap_fundamentacao.tex  cap_introducao.tex  cap_metodologia.tex  cap_resultados.tex  main.tex  referencias.bib
ppgmne_prf/: load_data.py  main.py  optim.py  preprocess.py  utils.py
ppgmne_prf/config/: params.py  paths.py
