[tool.poetry]
name = "ppgmne-prf"
version = "0.1.0"
description = ""
authors = ["Antonio Júnior <juniorssz@gmail.com>"]
readme = "README.md"
packages = [{include = "ppgmne_prf"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
pyomo = "^6.4.4"
gurobipy = "^10.0.0"
loguru = "^0.6.0"
haversine = "^2.7.0"
pandera = "^0.13.4"
unidecode = "^1.3.6"
holidays = "^0.17.2"
shapely = "^1.8.5.post1"
scipy = "^1.9.3"
kml2geojson = "^5.1.0"
scikit-learn = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"
black = "^22.12.0"
isort = "^5.10.1"
notebook = "^6.5.2"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
